# fanvue-backend

./: .gitignore  check_db.ts  drop-db.ts  enable-vector.js  enable-vector.ts  fix-ts-errors.js  fix-ts.js  fix-ts2.js  fix-ts3.js  fix-ts4.js  fix-ts5.js  fix-ts6.js  fix-ts7.js  package-lock.json  package.json  render.yaml  test-apis.ts  test-drizzle.ts  test_autopilot.ts  test_create.ts  test_empty.ts  test_undefined.ts  wipe-and-push.js
ai-platform/: .env.example  (+5 more)
ai-platform/apps/api/: .env.example  README.md  pyproject.toml  test_llm.py
ai-platform/apps/api/app/: __init__.py  config.py  db.py  main.py  security.py
ai-platform/apps/api/app/agent/: __init__.py  llm.py  mcp_server.py  open_model_loop.py  ornith_client.py
ai-platform/apps/api/fanvue_promotion_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-platform/apps/api/skills/: chat_agent.md  thermonuclear_review.md  vip_retention.md
ai-platform/apps/api/tests/: test_analytics_worker.py  test_b2b_lead_agent.py  test_crm_worker.py  test_crm_workflow_engine.py  test_crypto_tool_schema.py  test_curator_exporter.py  test_dex_router.py  test_did_manager.py  test_guardrails.py  test_hermes_integration.py  test_hf_comfyui_client.py  test_kalshi_client.py  test_kalshi_tool_schema.py  test_mcp_server.py  test_media_pipeline.py  test_platform_service.py  test_rating_pipeline.py  test_referral_engine.py  test_referral_generator.py  test_scheduler_worker.py  test_skill_registry.py  test_tokenization.py  test_treasury_agent.py  test_tts_client.py  test_twitter_trend_analyzer.py  test_zk_coprocessor.py
(+151 files in other folders)
