[project]
name = "fanvue-promotion-backend"
version = "0.1.0"
description = "FastAPI backend engine for Fanvue Promotion OS: agent loops, CRM webhooks, media branching, skills, and schedules."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.9",
  "schedule>=1.2"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]
